clusters/k8s-demo-with-pjh/jibaek/jibaek-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jibaek-app-ingress
  namespace: jibaek
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  ingressClassName: gce
  rules:
  - host: "woodoku.baekjaein.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jibaek-woodoku-app-service
            port:
              number: 8080
  - host: "gh-action.baekjaein.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jibaek-gh-action-demo-app-service
            port:
              number: 8888
